--- a/index.html
+++ b/index.html
@@ -7,11 +7,32 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="container">
-    <img src="assets/logo.png" alt="Cardano Logo" class="logo"/>
-    <h1>Welcome to Viet Cardano Documentation</h1>
-    <p>This is a static site hosted on GitHub Pages.</p>
-    <a href="https://cardano.org" target="_blank">Visit Cardano Official</a>
-  </div>
+  <header>
+    <img src="assets/logo.png" alt="Cardano Logo" class="logo">
+    <h1>Viet Cardano Community</h1>
+    <p>Cổng thông tin và tài liệu học tập về Cardano, dành riêng cho cộng đồng Việt.</p>
+    <a class="btn" href="https://cardano.org" target="_blank">Khám phá Cardano</a>
+  </header>
+
+  <main>
+    <section class="features">
+      <div class="card">
+        <h2>Tài liệu tiếng Việt</h2>
+        <p>Tổng hợp tài liệu Cardano từ cơ bản đến nâng cao, được biên dịch cho người Việt.</p>
+      </div>
+      <div class="card">
+        <h2>Đóng góp cộng đồng</h2>
+        <p>Chúng tôi khuyến khích mọi người cùng viết, dịch và đóng góp nội dung để phát triển hệ sinh thái.</p>
+      </div>
+      <div class="card">
+        <h2>Minh bạch & mở</h2>
+        <p>Tất cả nội dung đều công khai trên GitHub và được duy trì bởi cộng đồng.</p>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    © 2025 Viet Cardano Community · <a href="https://github.com/VietCardanoCommunity">GitHub</a>
+  </footer>
 </body>
 </html>
