--- a/index.html
+++ b/index.html
@@ -1,20 +1,38 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Cộng đồng Cardano Việt Nam</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="logo.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="logo.svg" type="image/svg+xml" />
 </head>
 <body>
 
-  <header>
+  <!-- HEADER NAVIGATION -->
+  <nav class="navbar">
+    <div class="logo">Cardano Việt nam</div>
+    <ul class="nav-links">
+      <li><a href="#">Cardano360</a></li>
+      <li><a href="#">SmartContract</a></li>
+      <li><a href="#">Tin tức</a></li>
+      <li><a href="#">Bạn cần biết</a></li>
+    </ul>
+    <div class="nav-right">
+      <a href="#" class="nav-link">Telegram ↗</a>
+      <button class="dark-mode-toggle">🌙</button>
+      <input type="text" placeholder="Search" class="search-box" />
+    </div>
+  </nav>
+
+  <!-- HERO -->
+  <header class="hero">
     <h1>Cộng đồng Cardano Việt nam</h1>
     <p>Vì một thế giới Phi tập trung hơn</p>
     <a href="#" class="button">Cardano Blockchain Certified Associate</a>
   </header>
 
+  <!-- MAIN CONTENT -->
   <section class="features">
     <div class="feature">
       <img src="images/icon1.png" alt="Hiểu Cardano">
@@ -34,6 +52,16 @@
       <p>Tin tức & sự kiện | Bài viết công nghệ | Phân tích và bình luận | Tin vắn | Podcast | Videos | Cardano Summit 2023 | Kinh nghiệm đầu tư | Bạn cần biết | Hệ sinh thái dApp | Cardano Runner</p>
     </div>
   </section>
+
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy; 2025 Cộng đồng Cardano Việt Nam. All rights reserved.</p>
+    <div class="footer-links">
+      <a href="#">Giới thiệu</a> |
+      <a href="#">Liên hệ</a> |
+      <a href="#">Điều khoản</a>
+    </div>
+  </footer>
 
 </body>
 </html>
