--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
   <section class="sections">
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/100/000000/mountains.png" alt="Hiểu Cardano" />
+      <img src="https://github.com/VietCardanoCommunity/cardanodoc/blob/gh-pages/images/DUY09825.jpg" alt="Hiểu Cardano" />
       <h3>Thấu hiểu Cardano</h3>
       <p>Cardano 360 | Roadmap | IOG | Staking | Catalyst | eUTXO | Hydra | Stablecoin Djed | Sidechain | Mithril | Ví | Ouroboros | CIP | Native token | Charles Hoskinson | So sánh blockchain | What's next - 2023? | dRep</p>
     </div>
