--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <p>Cardano 360 | Roadmap | IOG | Staking | Catalyst | eUTXO | Hydra | Stablecoin Djed | Sidechain | Mithril | Ví | Ouroboros | CIP | Native token | Charles Hoskinson | So sánh blockchain | What's next - 2023? | dRep</p>
     </div>
     <div class="card">
-      <img src="https://img.icons8.com/ios-filled/100/000000/code.png" alt="Smart Contract" />
+      <img src="https://github.com/VietCardanoCommunity/cardanodoc/blob/gh-pages/images/Sang.png" alt="Smart Contract" />
       <h3>Smart Contract</h3>
       <p>Giới thiệu chung | Haskell | Plutus | Marlowe | Các công cụ dành cho nhà lập trình | Javascript | Python | Mã code mẫu (Plutus)</p>
     </div>
