--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       </ul>
     </nav>
     <div class="actions">
-      <a href="#" target="https://t.me/ADA_VIET">Telegram ↗</a>
+      <a href="https://t.me/ADA_VIET" target="https://t.me/ADA_VIET">Telegram ↗</a>
       <input type="text" placeholder="Search" />
       <button title="Dark mode">🌙</button>
     </div>
