--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       margin: 3rem auto;
       font-size: 1.25rem;
     }
+    .banner img {
+      width: 100%;
+      max-width: 1000px;
+      height: auto;
+      border-radius: 8px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
     .cards {
       display: flex;
       justify-content: center;
@@ -82,7 +89,10 @@
 </header>
 
 <section class="banner">
-  <button>Cardano Blockchain Certified Associate</button>
+  <img src="https://vietcardanocommunity.github.io/cardanodoc/images/banner.jpg" alt="Cardano Banner" />
+  <div style="margin-top: 1rem;">
+    <button>Cardano Blockchain Certified Associate</button>
+  </div>
 </section>
 
 <section class="cards">
