--- a/index.html
+++ b/index.html
@@ -97,10 +97,12 @@
 
 <section class="cards">
   <div class="card">
-    <h3>Thấu hiểu Cardano</h3>
+    <img src="https://vietcardanocommunity.github.io/cardanodoc/images/DUY09825.jpg" alt="Jimmy mõm" />
+    <h3>Thánh mõm Jimmy</h3>
     <p>Cardano 360 | Roadmap | IOG | Catalyst | eUTXO | Hydra | Djed...</p>
   </div>
   <div class="card">
+     <img src="https://vietcardanocommunity.github.io/cardanodoc/images/Sang.jpg" alt="Sang trade liều" />
     <h3>Smart Contract</h3>
     <p>Giới thiệu | Haskell | Plutus | Marlowe | JavaScript | công cụ dev...</p>
   </div>
