--- a/index.html
+++ b/index.html
@@ -98,8 +98,10 @@
 <section class="cards">
   <div class="card">
     <img src="https://vietcardanocommunity.github.io/cardanodoc/images/DUY09825.jpg" alt="Jimmy mõm" />
+    <div class="card-content">
     <h3>Thánh mõm Jimmy</h3>
     <p>Cardano 360 | Roadmap | IOG | Catalyst | eUTXO | Hydra | Djed...</p>
+    </div>
   </div>
   <div class="card">
      <img src="https://vietcardanocommunity.github.io/cardanodoc/images/Sang.jpg" alt="Sang trade liều" />
