--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 <section class="cards">
   <div class="card">
-    <img src="/images/DUY09825.jpg" alt="Jimmy mõm" />
+    <img src="/images/jimmy.jpg" alt="Jimmy mõm" />
     
     <h3>Thánh mõm Jimmy</h3>
     <p>Cardano 360 | Roadmap | IOG | Catalyst | eUTXO | Hydra | Djed...</p>
